[package]
name = "PMPC"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }
# 序列化/反序列化 (JSON 和 TOML)
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
# 以太坊交互库
alloy = { version = "1.1.2", features = ["full"] }
# 消息队列 (ZMQ)
zeromq = "0.4.1"
futures = "0.3"
include_dir = "0.7"
url = "2.5.7"
# 密码学
blst = { version = "0.3", features = ["portable"] }
rand = "0.9.2"
hex = "0.4"
# ... 其他依赖 ...
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
base64 = "0.21"
sha2 = "0.10" # 用于 hash256